docker_kubernetes/Kuber/yaml_files/my-frontend-nodeport.yaml
apiVersion: v1
kind: Service 
metadata:
  name: my-frontend-nodeport

spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 31100
  
  selector:
      app: my-app
      type: frontend
