docker_kubernetes/Kuber/yaml_files/my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-backend-clusterip
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: my-nginx-clusterip
                port:
                  number: 80
          - path: /auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-keycloak-clusterip
                port:
                  number: 8080
          - path: /db/(.*)
            pathType: Prefix
            backend:
              service:
                name: my-postgres-clusterip
                port:
                  number: 5432
